--- a/WebContent/views/desktop/gestion/ayudas/solicitudes/SolicitudesIndex.zul
+++ b/WebContent/views/desktop/gestion/ayudas/solicitudes/SolicitudesIndex.zul
@@ -14,8 +14,9 @@
 
 						<listhead sizable="true">
 							<listheader width="12%" label="Titulo de Solicitud" />
-							<listheader width="12%" label="Estatus de Solicitud" />
-							<listheader width="12%" label="Nombre Beneficiario" />
+							<listheader width="18%" label="Estatus de Solicitud" />
+							<listheader width="18%" label="Nombre Beneficiario" />
+							<listheader width="18%" label="Apellido Beneficiario" />
 							<listheader width="12%" label="Urgencia" />
 							<listheader width="12%" label="Ayuda Aportada" />
 							<listheader width="12%" label="Fecha" />
@@ -27,6 +28,7 @@
 								<listcell label="@load(each.titulo)" />
 								<listcell label="@load(each.estatusSolicitudEnum)" />
 								<listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />
+								<listcell label="@load(each.fkBeneficiario.fkPersona.apellido)" />
 								<listcell label="@load(each.urgenciaEnum)" />
 								<listcell label="@load(each.fkAyuda.nombre)" />
 								  <listcell label="${m:convertirLongATimestamp(each.fecha)}" />  
@@ -37,7 +39,7 @@
 							</listitem>
 						</template>
 						<listfoot>
-							<listfooter id="listFoot" span="6"
+							<listfooter id="listFoot" span="7"
 								use="karen.core.listfoot.ListFoot">
 							</listfooter>
 						</listfoot>
