calificacion en comentario y album de TS

--- a/WebContent/assets/css/web/album.css
+++ b/WebContent/assets/css/web/album.css
@@ -102,7 +102,8 @@ button {
 
 .comentarios button {
 	float: right;
-	margin: 0 1rem;;
+	margin: 0 1rem;
+	margin-top: 18px;
 }
 
 /* estilos para el modal */
@@ -122,4 +123,15 @@ button {
 
 #modalFormComentarios .form div:nth-of-type(4){
 	margin-bottom: 10px;
+}
+
+span.stars, span.stars span {
+    display: block;
+    background: url(/SmileWebApp/imagenes/portal/icon/stars.png) 0 -16px repeat-x;
+    width: 80px;
+    height: 16px;
+}
+
+span.stars span {
+    background-position: 0 0;
 }
