--- a/WebContent/views/desktop/gestion/apadrinamiento/padrino/PadrinoIndex.zul
+++ b/WebContent/views/desktop/gestion/apadrinamiento/padrino/PadrinoIndex.zul
@@ -1,3 +1,5 @@
+ <?xel-method prefix="m" name="convertirLongATimestamp" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongATimestamp(java.lang.Long)" ?> 
 <zk xmlns:n="native" xmlns:w="client">
 	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
@@ -22,7 +24,7 @@
 								<listcell label="@load(each.fkPersona.nombre)" />
 								<listcell label="@load(each.fkPersona.apellido)" />
 								<listcell label="@load(each.fkFrecuenciaAporte.nombre)" />
-								<listcell label="@load(each.fechaIngreso)" />
+								<listcell label="${m:convertirLongATimestamp(each.fechaIngreso)}" /> 
 								<listcell label="@load(each.monto)" />
 								
 							</listitem>
