--- a/WebContent/views/desktop/gestion/apadrinamiento/postulacion/selectPostulado.zul
+++ b/WebContent/views/desktop/gestion/apadrinamiento/postulacion/selectPostulado.zul
@@ -2,10 +2,10 @@
 	<div sclass="animated fadeInLeft">
 		<div class="row">
 			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Seleccione el Padrino a completar los datos" sclass="label-medium-500"></label>
+				<label value="Seleccione el postulado a revisar" sclass="label-medium-500"></label>
 			</div>
 		</div>
-	 	
+		
 		<div width="100%">
 			<div class="row">
 				<div class="col s12">
