--- a/WebContent/views/desktop/gestion/apadrinamiento/registro/DatosPersonales.zul
+++ b/WebContent/views/desktop/gestion/apadrinamiento/registro/DatosPersonales.zul
@@ -43,7 +43,7 @@
 					
 					<div class="input-field col s6">
 						<n:label for="sexo" class="active">Sexo</n:label>
-						<combobox id="sexo" readonly="true" model="@bind(vm.sexoEnums)">
+						<combobox id="sexo" readonly="true" selectedItem="@bind(vm.sexoEnum)" model="@bind(vm.sexoEnums)">
 							<template name="model">
 								<comboitem label="@load(each)" />
 							</template>
