--- a/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/EgresoFamiliarIndex.zul
+++ b/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/EgresoFamiliarIndex.zul
@@ -2,7 +2,7 @@
 	<div class="wizard ${arg.animation_} container"
 		use="karen.core.simple_list.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.ayudas.beneficiarios_y_familiares.VM_BeneficiarioYFamiliarIndex')">
+		viewModel="@id('vm') @init('ve.smile.gestion.ayudas.egreso_familiar.VM_EgresoFamiliarIndex')">
 		<div class="row">
 			<div id="ulHeaderWizard"
 				use="karen.core.simple_list.wizard.buttons.containers.UlHeaderWizard">
