--- a/WebContent/views/web/main.zul
+++ b/WebContent/views/web/main.zul
@@ -369,17 +369,13 @@
 				<n:div id="galeria">
 					<div class="col s5">
 						<n:h4>galería de fotos</n:h4>
-						<div class="carousel">
-							<div class="carousel-item">
-								<image class="img-responsive" src="/imagenes/portal/galeria1.png"></image>
-							</div>
-							<div class="carousel-item">
-								<image class="img-responsive" src="/imagenes/portal/galeria2.png" ></image>			
-							</div>	
-							<div class="carousel-item">
-								<image class="img-responsive" src="/imagenes/portal/galeria3.jpg"></image>
-							</div>
-							<span  onClick="@command('galeria')">ver mas</span>
+						<div class="carousel" children="@load(vm.multiemdiaGaleria)">
+							<template name="children">
+								<div class="carousel-item">
+									<image class="img-responsive" src="@load(each.url)"></image>
+								</div>
+								<span  onClick="@command('galeria')">ver mas</span>
+							</template>
 						</div>
 					</div>				
 				</n:div>
