--- a/WebContent/assets/css/web/galeria.css
+++ b/WebContent/assets/css/web/galeria.css
@@ -8,7 +8,7 @@
 	text-align: center;
 	text-transform: uppercase;	
 }
-#albumes .albumes .s4:nth-child(4n), #fotos .fotos .s4:nth-child(4n) {
+#albumes .albumes .s4:nth-child(3n+1), #fotos .fotos .s4:nth-child(3n+1) {
    	clear: left;
 }
 
@@ -18,7 +18,7 @@
 
 #fotos .seccion {
 	padding: 20px 0;
-	background: url("/SmileWebApp/imagenes/portal/fondo-body2.png") no-repeat;
+	background: url("/SmileWebApp/imagenes/portal/fondo-body2.png");
 }
 
 #albumes .seccion {
